build_errors.txt

> Task :compileJava FAILED
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\commands\AlignToTagCommand.java:11: error: interface expected here
public class AlignToTagCommand implements Command {
                                          ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\subsystems\vision\VisionSubsystem.java:7: error: no interface expected here
public class VisionSubsystem extends Subsystem {
                                     ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\commands\ElevatorToPositionCommand.java:10: error: interface expected here
public class ElevatorToPositionCommand implements Command {
                                                  ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\subsystems\elevator\ElevatorSubsystem.java:6: error: no interface expected here
public class ElevatorSubsystem extends Subsystem {
                                       ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\teleop\MainTeleOp.java:15: error: cannot find symbol
import org.areslib.subsystems.drive.SwerveDriveIOReal;
                                   ^
  symbol:   class SwerveDriveIOReal
  location: package org.areslib.subsystems.drive
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\commands\AlignToTagCommand.java:27: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\commands\AlignToTagCommand.java:47: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\commands\AlignToTagCommand.java:52: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\commands\AlignToTagCommand.java:58: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\subsystems\vision\VisionSubsystem.java:16: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\commands\ElevatorToPositionCommand.java:19: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\commands\ElevatorToPositionCommand.java:24: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\commands\ElevatorToPositionCommand.java:29: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\commands\ElevatorToPositionCommand.java:35: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\commands\ElevatorToPositionCommand.java:40: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\commands\ElevatorToPositionCommand.java:43: error: no suitable method found for add(org.firstinspires.ftc.teamcode.subsystems.elevator.ElevatorSubsystem)
        requirements.add(elevator);
                    ^
    method java.util.Collection.add(org.areslib.command.Subsystem) is not applicable
      (argument mismatch; org.firstinspires.ftc.teamcode.subsystems.elevator.ElevatorSubsystem cannot be converted to org.areslib.command.Subsystem)
    method java.util.Set.add(org.areslib.command.Subsystem) is not applicable
      (argument mismatch; org.firstinspires.ftc.teamcode.subsystems.elevator.ElevatorSubsystem cannot be converted to org.areslib.command.Subsystem)
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\subsystems\elevator\ElevatorSubsystem.java:23: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\subsystems\elevator\ElevatorSubsystem.java:26: error: incompatible types: org.firstinspires.ftc.teamcode.subsystems.elevator.ElevatorIO.ElevatorIOInputs cannot be converted to org.areslib.telemetry.AresLoggableInputs
        AresAutoLogger.processInputs("Elevator", inputs);
                                                 ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\teleop\MainTeleOp.java:52: error: cannot find symbol
            new SwerveDriveIOReal(
                ^
  symbol:   class SwerveDriveIOReal
  location: class org.firstinspires.ftc.teamcode.teleop.MainTeleOp
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\teleop\MainTeleOp.java:79: error: method registerSubsystem in class org.areslib.command.CommandScheduler cannot be applied to given types;
        CommandScheduler.getInstance().registerSubsystem(elevator);
                                      ^
  required: org.areslib.command.Subsystem[]
  found: org.firstinspires.ftc.teamcode.subsystems.elevator.ElevatorSubsystem
  reason: varargs mismatch; org.firstinspires.ftc.teamcode.subsystems.elevator.ElevatorSubsystem cannot be converted to org.areslib.command.Subsystem
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\teleop\MainTeleOp.java:85: error: method registerSubsystem in class org.areslib.command.CommandScheduler cannot be applied to given types;
        CommandScheduler.getInstance().registerSubsystem(vision);
                                      ^
  required: org.areslib.command.Subsystem[]
  found: org.firstinspires.ftc.teamcode.subsystems.vision.VisionSubsystem
  reason: varargs mismatch; org.firstinspires.ftc.teamcode.subsystems.vision.VisionSubsystem cannot be converted to org.areslib.command.Subsystem
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\teleop\MainTeleOp.java:111: error: cannot find symbol
        driver.getAButton().whileHeld(
              ^
  symbol:   method getAButton()
  location: variable driver of type org.areslib.hardware.wrappers.AresGamepad
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\teleop\MainTeleOp.java:116: error: cannot find symbol
        operator.getDpadUpButton().whenPressed(
                ^
  symbol:   method getDpadUpButton()
  location: variable operator of type org.areslib.hardware.wrappers.AresGamepad
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\teleop\MainTeleOp.java:121: error: cannot find symbol
        operator.getDpadDownButton().whenPressed(
                ^
  symbol:   method getDpadDownButton()
  location: variable operator of type org.areslib.hardware.wrappers.AresGamepad
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
24 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 1s
1 actionable task: 1 executed
